[workspace]
members = ["frdm-kl25-hal", "mc33hb2001", "mkl25z4-pac"]


[workspace.lints]
clippy.pedantic = "warn"
rust.missing_docs = "warn"


[workspace.dependencies]
bitfield-struct = "0.10"
cassette = "0.3"
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "1"
embedded-hal-async = "1"
embedded-hal-bus = "0.3"
panic-probe = "0.3"
synch = "0.1"
vcell = "0.1"
woven = "0.1"


[profile.dev]
opt-level = 1


[profile.release]
opt-level = 3
lto = "fat"


[package]
name = "ethrottle"
version = "0.1.0"
edition = "2021"


[lints]
workspace = true


[dependencies]
cassette = { workspace = true }
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal-bus = { workspace = true, features = ["async"] }
hal = { path = "frdm-kl25-hal", package = "frdm-kl25-hal" }
mc33hb2001 = { path = "./mc33hb2001" }
panic-probe = { workspace = true, features = ["print-defmt"] }
synch = { workspace = true, features = ["defmt"] }
woven = { workspace = true }
