[package]
name = "frdm-kl25-hal"
version = "0.1.0"
edition = "2021"


[lints]
workspace = true


[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
pac = { path = "../mkl25z4-pac", package = "mkl25z4-pac", features = [
    "rt",
    "defmt",
] }
woven = { workspace = true }
