[package]
name = "mkl25z4-pac"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true, optional = true }
critical-section = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
vcell = { workspace = true }


[features]
rt = ["cortex-m-rt/device"]
defmt = ["dep:defmt"]
